@@ -1,3 +1,7 @@
+2015-05-23  Jiang Jiang  <gzjjgod@gmail.com>
+
+	* dvi.c: Fix Type1 font encoding and metrics.
+
 2015-05-21  Karl Berry  <karl@tug.org>
 
 	* version 20150515 for TL'15.
